--- a/.github/workflows/armv7-prisma.yaml
+++ b/.github/workflows/armv7-prisma.yaml
@@ -32,8 +32,10 @@ jobs:
             target
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
-      - name: Setup cross with OpenSSL
-        run: |-
+      - name: Setup Cross-compile env
+        run: |
+          sudo apt-get install -qq gcc-armv7-unknown-linux-gnueabihf
+          rustup target add armv7-unknown-linux-gnueabihf
           cat <<EOF > Cross.toml
             [target.armv7-unknown-linux-gnueabihf]
             pre-build = [
