--- a/.github/workflows/armv7-prisma.yaml
+++ b/.github/workflows/armv7-prisma.yaml
@@ -34,8 +34,20 @@ jobs:
 
       - name: Setup Cross-compile env
         run: |
-          sudo apt-get install -qq gcc-armv7-unknown-linux-gnueabihf
+          cat << EOF | sudo tee /etc/apt/sources.list
+          # ARM Support
+          deb [arch=armhf] http://ports.ubuntu.com/ubuntu-ports jammy main restricted universe multiverse
+          deb [arch=armhf] http://ports.ubuntu.com/ubuntu-ports jammy-updates main restricted universe multiverse
+          deb [arch=armhf] http://ports.ubuntu.com/ubuntu-ports jammy-backports main restricted universe multiverse
+          deb [arch=armhf] http://ports.ubuntu.com/ubuntu-ports jammy-security main restricted universe multiverse
+          EOF
+
+          sudo dpkg --add-architecture armhf
+          sudo apt update
+          sudo apt install -y gcc-arm-linux-gnueabihf g++-arm-linux-gnueabihf libc6-dev-armhf-cross libssl-dev:armhf
+
           rustup target add armv7-unknown-linux-gnueabihf
+          
           cat <<EOF > Cross.toml
             [target.armv7-unknown-linux-gnueabihf]
             pre-build = [
