--- a/.github/workflows/armv7-prisma.yaml
+++ b/.github/workflows/armv7-prisma.yaml
@@ -5,11 +5,12 @@ on:
 jobs:
   build:
     name: "Building Prisma Engine for ARMv7"
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
     env:
       SQLITE_MAX_VARIABLE_NUMBER: 250000
       SQLITE_MAX_EXPR_DEPTH: 10000
-    runs-on: ubuntu-latest
-
     steps:
       - name: Checkout prisma/prisma-engines
         uses: actions/checkout@v4
@@ -36,10 +37,10 @@ jobs:
         run: |
           cat << EOF | sudo tee /etc/apt/sources.list
           # ARM Support
-          deb [arch=armhf] http://ports.ubuntu.com/ubuntu-ports jammy main restricted universe multiverse
-          deb [arch=armhf] http://ports.ubuntu.com/ubuntu-ports jammy-updates main restricted universe multiverse
-          deb [arch=armhf] http://ports.ubuntu.com/ubuntu-ports jammy-backports main restricted universe multiverse
-          deb [arch=armhf] http://ports.ubuntu.com/ubuntu-ports jammy-security main restricted universe multiverse
+          deb [arch=armhf,arm64] http://ports.ubuntu.com/ubuntu-ports jammy main restricted universe multiverse
+          deb [arch=armhf,arm64] http://ports.ubuntu.com/ubuntu-ports jammy-updates main restricted universe multiverse
+          deb [arch=armhf,arm64] http://ports.ubuntu.com/ubuntu-ports jammy-backports main restricted universe multiverse
+          deb [arch=armhf,arm64] http://ports.ubuntu.com/ubuntu-ports jammy-security main restricted universe multiverse
           EOF
 
           sudo dpkg --add-architecture armhf
@@ -47,7 +48,7 @@ jobs:
           sudo apt install -y gcc-arm-linux-gnueabihf g++-arm-linux-gnueabihf libc6-dev-armhf-cross libssl-dev:armhf
 
           rustup target add armv7-unknown-linux-gnueabihf
-          
+
           cat <<EOF > Cross.toml
             [target.armv7-unknown-linux-gnueabihf]
             pre-build = [
