--- a/.github/workflows/armv7-prisma.yaml
+++ b/.github/workflows/armv7-prisma.yaml
@@ -67,6 +67,8 @@ jobs:
           cargo build --target armv7-unknown-linux-gnueabihf --release -p query-engine -p query-engine-node-api -p schema-engine-cli -p prisma-fmt
         env:
           PKG_CONFIG_ALLOW_CROSS: 1
+          PKG_CONFIG_PATH: /usr/lib/arm-linux-gnueabihf/pkgconfig/:$PKG_CONFIG_PATH
+          PKG_CONFIG_SYSROOT_DIR: /usr/arm-linux-gnueabihf/:$PKG_CONFIG_SYSROOT_DIR
           CARGO_TARGET_ARMV7_UNKNOWN_LINUX_GNUEABIHF_LINKER: arm-linux-gnueabihf-gcc
 
       - name: Upload artifacts
