--- a/.github/workflows/armv7-prisma.yaml
+++ b/.github/workflows/armv7-prisma.yaml
@@ -54,11 +54,14 @@ jobs:
 
           rustup target add armv7-unknown-linux-gnueabihf
 
-          cargo install cross
+          cat > .cargo/config.toml << EOF
+          [target.armv7-unknown-linux-gnueabihf]
+          linker = "arm-linux-gnueabihf-gcc"
+          EOF
 
       - name: Build engine
         run: |
-          cross build \
+          cargo build \
             --target armv7-unknown-linux-gnueabihf \
             --release -p query-engine \
             -p query-engine-node-api \
@@ -67,8 +70,8 @@ jobs:
         env:
           RUSTFLAGS: "-C linker=arm-linux-gnueabihf-gcc"
           PKG_CONFIG_ALLOW_CROSS: 1
-          PKG_CONFIG_PATH: /usr/lib/arm-linux-gnueabihf/pkgconfig/:$PKG_CONFIG_PATH
-          PKG_CONFIG_SYSROOT_DIR: /usr/arm-linux-gnueabihf/:$PKG_CONFIG_SYSROOT_DIR
+          PKG_CONFIG_PATH: /usr/lib/arm-linux-gnueabihf/pkgconfig
+          PKG_CONFIG_SYSROOT_DIR: /usr/arm-linux-gnueabihf
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
