--- a/.github/workflows/armv7-prisma.yaml
+++ b/.github/workflows/armv7-prisma.yaml
@@ -54,6 +54,7 @@ jobs:
 
           rustup target add armv7-unknown-linux-gnueabihf
 
+          mkdir -p .cargo
           cat > .cargo/config.toml << EOF
           [target.armv7-unknown-linux-gnueabihf]
           linker = "arm-linux-gnueabihf-gcc"
