--- a/.github/workflows/armv7-prisma.yaml
+++ b/.github/workflows/armv7-prisma.yaml
@@ -48,17 +48,13 @@ jobs:
           deb [arch=armhf,arm64] http://ports.ubuntu.com/ubuntu-ports jammy-security main restricted universe multiverse
           EOF
 
-          sudo dpkg --add-architecture armhf
-          sudo apt update
-          sudo apt install -y gcc-arm-linux-gnueabihf libssl-dev:armhf
+          sudo dpkg --add-architecture armhf && sudo apt update
+          sudo apt install -y \
+            gcc-arm-linux-gnueabihf \
+            libssl-dev:armhf \
+            zlib1g-dev:armhf
 
           rustup target add armv7-unknown-linux-gnueabihf
-
-          mkdir -p .cargo
-          cat > .cargo/config.toml << EOF
-          [target.armv7-unknown-linux-gnueabihf]
-          linker = "arm-linux-gnueabihf-gcc"
-          EOF
 
       - name: Build engine
         run: |
@@ -69,10 +65,10 @@ jobs:
             -p schema-engine-cli \
             -p prisma-fmt
         env:
-          RUSTFLAGS: "-C linker=arm-linux-gnueabihf-gcc"
           PKG_CONFIG_ALLOW_CROSS: 1
           PKG_CONFIG_PATH: /usr/lib/arm-linux-gnueabihf/pkgconfig
           PKG_CONFIG_SYSROOT_DIR: /usr/arm-linux-gnueabihf
+          CARGO_TARGET_ARMV7_UNKNOWN_LINUX_GNUEABIHF_LINKER: arm-linux-gnueabihf-gcc
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
