docs: update readme

--- a/.github/workflows/armv7-prisma.yaml
+++ b/.github/workflows/armv7-prisma.yaml
@@ -1,6 +1,13 @@
 name: Building Prisma Engine for ARMv7
 on:
   workflow_dispatch:
+    inputs:
+      prisma_tag:
+        description: "Prisma Engine Version"
+        type: string
+        required: true
+        default: |
+          The release tag of prisma/prisma-engines
 
 jobs:
   build:
@@ -16,7 +23,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: "prisma/prisma-engines"
-          ref: 5.14.0
+          ref: ${{ inputs.prisma_tag }}
 
       - name: Setup rust env
         uses: dtolnay/rust-toolchain@stable
@@ -58,12 +65,8 @@ jobs:
 
       - name: Build engine
         run: |
-          cargo build \
-            --target armv7-unknown-linux-gnueabihf \
-            --release -p query-engine \
-            -p query-engine-node-api \
-            -p schema-engine-cli \
-            -p prisma-fmt
+          cargo build --release --target armv7-unknown-linux-gnueabihf
+          chmod +x ${{ github.workspace }}/target/armv7-unknown-linux-gnueabihf/release/schema-engine
         env:
           PKG_CONFIG_ALLOW_CROSS: 1
           PKG_CONFIG_PATH: /usr/lib/arm-linux-gnueabihf/pkgconfig
@@ -75,7 +78,18 @@ jobs:
         with:
           name: binaries
           path: |
-            ${{ github.workspace }}/target/armv7-unknown-linux-gnueabihf/release/schema-engine
-            ${{ github.workspace }}/target/armv7-unknown-linux-gnueabihf/release/prisma-fmt
-            ${{ github.workspace }}/target/armv7-unknown-linux-gnueabihf/release/query-engine
-            ${{ github.workspace }}/target/armv7-unknown-linux-gnueabihf/release/libquery_engine.dylib
+            ${{ github.workspace }}/target/armv7-unknown-linux-gnueabihf/release/*
+
+      # - name: Release ARMv7 Prisma Engine ${{ inputs.prisma_tag }}
+      #   uses: ncipollo/release-action@v1
+      #   with:
+      #     allowUpdates: true
+      #     token: ${{ secrets.GITHUB_TOKEN }}
+      #     name: ARMv7 Prisma Engine ${{ inputs.prisma_tag }}
+      #     tag: ${{ inputs.prisma_tag }}
+      #     draft: false
+      #     prerelease: false
+      #     makeLatest: latest
+      #     removeArtifacts: true
+      #     artifacts: |
+      #       ${{ github.workspace }}/target/armv7-unknown-linux-gnueabihf/release/*
