--- a/.github/workflows/armv7-prisma.yaml
+++ b/.github/workflows/armv7-prisma.yaml
@@ -71,6 +71,8 @@ jobs:
             -p query-engine-node-api \
             -p schema-engine-cli \
             -p prisma-fmt
+          cd ${{ github.workspace }}/target/armv7-unknown-linux-gnueabihf/release
+          mv libquery_engine.so libquery_engine.so.node
         env:
           PKG_CONFIG_ALLOW_CROSS: 1
           PKG_CONFIG_PATH: /usr/lib/arm-linux-gnueabihf/pkgconfig
@@ -85,21 +87,21 @@ jobs:
             ${{ github.workspace }}/target/armv7-unknown-linux-gnueabihf/release/schema-engine
             ${{ github.workspace }}/target/armv7-unknown-linux-gnueabihf/release/prisma-fmt
             ${{ github.workspace }}/target/armv7-unknown-linux-gnueabihf/release/query-engine
-            ${{ github.workspace }}/target/armv7-unknown-linux-gnueabihf/release/libquery_engine.so
+            ${{ github.workspace }}/target/armv7-unknown-linux-gnueabihf/release/libquery_engine.so.node
 
-      # - name: Release ARMv7 Prisma Engine ${{ inputs.prisma_tag }}
-      #   uses: ncipollo/release-action@v1
-      #   with:
-      #     allowUpdates: true
-      #     token: ${{ secrets.GITHUB_TOKEN }}
-      #     name: ARMv7 Prisma Engine ${{ inputs.prisma_tag }}
-      #     tag: ${{ inputs.prisma_tag }}
-      #     draft: false
-      #     prerelease: false
-      #     makeLatest: latest
-      #     removeArtifacts: true
-      #     artifacts: |
-      #       ${{ github.workspace }}/target/armv7-unknown-linux-gnueabihf/release/schema-engine
-      #       ${{ github.workspace }}/target/armv7-unknown-linux-gnueabihf/release/prisma-fmt
-      #       ${{ github.workspace }}/target/armv7-unknown-linux-gnueabihf/release/query-engine
-      #       ${{ github.workspace }}/target/armv7-unknown-linux-gnueabihf/release/libquery_engine.so
+      - name: Release ARMv7 Prisma Engine ${{ inputs.prisma_tag }}
+        uses: ncipollo/release-action@v1
+        with:
+          allowUpdates: true
+          token: ${{ secrets.GITHUB_TOKEN }}
+          name: ARMv7 Prisma Engine ${{ inputs.prisma_tag }}
+          tag: ${{ inputs.prisma_tag }}
+          draft: false
+          prerelease: false
+          makeLatest: latest
+          removeArtifacts: true
+          artifacts: |
+            ${{ github.workspace }}/target/armv7-unknown-linux-gnueabihf/release/schema-engine
+            ${{ github.workspace }}/target/armv7-unknown-linux-gnueabihf/release/prisma-fmt
+            ${{ github.workspace }}/target/armv7-unknown-linux-gnueabihf/release/query-engine
+            ${{ github.workspace }}/target/armv7-unknown-linux-gnueabihf/release/libquery_engine.so.node
