--- a/.github/workflows/armv7-prisma-musleabihf.yaml
+++ b/.github/workflows/armv7-prisma-musleabihf.yaml
@@ -40,31 +40,9 @@ jobs:
             target
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
-      - name: Setup Cross-compile env
-        run: |
-          cat << EOF | sudo tee /etc/apt/sources.list
-          # x86 Support
-          deb [arch=amd64,i386] http://archive.ubuntu.com/ubuntu jammy main restricted universe multiverse
-          deb [arch=amd64,i386] http://archive.ubuntu.com/ubuntu jammy-updates main restricted universe multiverse
-          deb [arch=amd64,i386] http://archive.ubuntu.com/ubuntu jammy-backports main restricted universe multiverse
-          deb [arch=amd64,i386] http://archive.ubuntu.com/ubuntu jammy-security main restricted universe multiverse
-          # ARM Support
-          deb [arch=armhf,arm64] http://ports.ubuntu.com/ubuntu-ports jammy main restricted universe multiverse
-          deb [arch=armhf,arm64] http://ports.ubuntu.com/ubuntu-ports jammy-updates main restricted universe multiverse
-          deb [arch=armhf,arm64] http://ports.ubuntu.com/ubuntu-ports jammy-backports main restricted universe multiverse
-          deb [arch=armhf,arm64] http://ports.ubuntu.com/ubuntu-ports jammy-security main restricted universe multiverse
-          EOF
-
-          sudo dpkg --add-architecture armhf && sudo apt update
-          sudo apt install -y \
-            gcc-arm-linux-musleabihf \
-            libssl-dev:armhf \
-            zlib1g-dev:armhf
-
-          rustup target add armv7-unknown-linux-musleabihf
-
       - name: Build engine
         run: |
+          rustup target add armv7-unknown-linux-musleabihf
           cargo build \
             --target armv7-unknown-linux-musleabihf \
             --release -p query-engine \
@@ -77,7 +55,9 @@ jobs:
           PKG_CONFIG_ALLOW_CROSS: 1
           PKG_CONFIG_PATH: /usr/lib/arm-linux-musleabihf/pkgconfig
           PKG_CONFIG_SYSROOT_DIR: /usr/arm-linux-musleabihf
-          CARGO_TARGET_ARMV7_UNKNOWN_LINUX_MUSLEABIHF_LINKER: arm-linux-musleabihf-gcc
+          TARGET_CC: musl-gcc
+          REALGCC: armv7-linux-gnueabihf-gcc-8
+          CARGO_TARGET_ARMV7_UNKNOWN_LINUX_MUSLEABIHF_LINKER: armv7-linux-musleabihf-gcc
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
